completed bulk notification using firebase functions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="only_signin">Sign In</string>
     <string name="new_player">New Player</string>
     <string name="pubg_id">PUBG ID</string>
+    <string name="filter_title_pubg">PubG Money Room</string>
 </resources>
