completed addition of youtube link

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="pubg_id">PUBG ID</string>
     <string name="filter_title_pubg">PubG Money Room</string>
     <string name="Rs">\u20B9</string>
+    <string name="youtube_link">Youtube Link</string>
 </resources>
