--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <string name="filter_title_pubg">PubG Money Room</string>
     <string name="Rs">\u20B9</string>
     <string name="youtube_link">Youtube Link</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
