--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,7 @@
     <string name="logout">Logout</string>
     <string name="navigation_drawer_open">Open</string>
     <string name="navigation_drawer_close">Close</string>
-    <string name="edittext_hint"><font size="30">0</font></string>
+    <string name="edittext_hint">
+        <font size="30">0</font>
+    </string>
 </resources>
